# cApps-substrate

./: Cargo.toml  README.md  integrate-runtime-module-condition.md
doc/: integration.md
pallets/multi-gomoku/: Cargo.toml
pallets/multi-gomoku/src/: lib.rs  mock.rs  tests.rs
pallets/multi-session-app/: Cargo.toml
pallets/multi-session-app/src/: lib.rs  mock.rs  tests.rs
pallets/single-gomoku/: Cargo.toml
pallets/single-gomoku/src/: lib.rs  mock.rs  tests.rs
pallets/single-session-app/: Cargo.toml
pallets/single-session-app/src/: lib.rs  mock.rs  tests.rs
