[package]
authors = ['Celer']
edition = '2018'
name = 'multi-gomoku'
version = '0.8.3'
license = "MIT"
repository = "https://github.com/celer-network/cApps-substrate"
description = "Multi Gomoku runtime module"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-balances/std',
]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"], default-features = false }
frame-support = { version = "2.0.0", default_features = false }
frame-system = { version = "2.0.0", default_features = false }
sp-std = { version = "2.0.0", default_features = false }
pallet-balances = { version = "2.0.0", default_features = false }
sp-runtime = { version = "2.0.0", default_features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default_features = false }
sp-io = { version = "2.0.0", default_features = false }
